src/tests/snapshots/nyx__tests__window_opening__check_target_output_and_workspace@ws1-out2-fsF-wfsB1-spB1.snap
---
source: src/tests/window_opening.rs
assertion_line: 434
description: "want fullscreen: B1\nset parent: B1\nconfig:\noutput \"headless-2\" {\n    layout {\n        border {\n            on\n        }\n    }\n}\n\nworkspace \"ws-1\" {\n    open-on-output \"headless-1\"\n}\n\nworkspace \"ws-2\" {\n    open-on-output \"headless-2\"\n\n    layout {\n        border {\n            width 10\n        }\n\n        default-column-width {\n            fixed 500\n        }\n    }\n}\n\nwindow-rule {\n    exclude title=\"parent\"\n\n    open-on-workspace \"ws-1\"\n    open-on-output \"headless-2\"\n    open-fullscreen false\n}\n\nwindow-rule {\n    match title=\"parent\"\n    open-on-output \"headless-1\"\n}"
expression: snapshot
---
final monitor: headless-1
final workspace: 0 (ws-1)

initial configure:
size: 0 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
